--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <WebView
-        android:id="@+id/wv"
+    <LinearLayout
+        android:id="@+id/ll_wv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:orientation="vertical" />
 
     <LinearLayout
         android:id="@+id/ll_work"
