--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="reload"
-                android:text="刷新" />
+                android:text="刷新"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/b_match"
@@ -160,7 +161,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="openShadow"
-                android:text="Open Shadow" />
+                android:text="Open Shadow"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/b_questions"
